--- a/config.json
+++ b/config.json
@@ -1,6 +1,1 @@
-
-    Host pj
-        HostName 192.168.64.155
-        User ubuntu
-    
-path: ~/Library/Application Support/basicvm/key
+{"HostName":"127.0.0.1","Port":"2004","user":"vagrant","IdentityFile":"C:\\Users\\anilk\\.bakerx\\insecure_private_key","ForwardAgent":"yes","StrictHostKeyChecking":"no","LogLevel":"QUIET"}
