assign ip for host only network

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"HostName":"127.0.0.1","Port":"2003","user":"vagrant","IdentityFile":"C:\\Users\\haris\\.bakerx\\insecure_private_key","ForwardAgent":"yes","StrictHostKeyChecking":"no","LogLevel":"QUIET"}
+{"HostName":"127.0.0.1","Port":"2003","user":"vagrant","IdentityFile":"C:\\Users\\anilk\\.bakerx\\insecure_private_key","ForwardAgent":"yes","StrictHostKeyChecking":"no","LogLevel":"QUIET"}
