--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"HostName":"127.0.0.1","Port":"2003","user":"vagrant","IdentityFile":"C:\\Users\\anilk\\.bakerx\\insecure_private_key","ForwardAgent":"yes","StrictHostKeyChecking":"no","LogLevel":"QUIET"}
+{"Host":"pj","HostName":"192.168.64.9","User":"ubuntu","keyPath":"~/Library/'Application Support'/basicvm/key"}
