modified inventory and config.json

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"Host":"pj","HostName":"192.168.64.9","User":"ubuntu","keyPath":"~/Library/'Application Support'/basicvm/key"}
+{"HostName":"192.168.52.100","User":"vagrant","keyPath":"C:\\Users\\anilk\\.bakerx\\insecure_private_key"}
