--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"Host":"pj","HostName":"192.168.52.100","User":"vagrant","keyPath":"C:\\Users\\anilk\\.bakerx\\insecure_private_key","vm_port":"2003","config_port":"2004"}
+{"Host":"pj","HostName":"192.168.52.100","User":"vagrant","keyPath":"~/.ssh/vm-server","vm_port":"2002","config_port":"2003"}
