--- a/lib/build.yml
+++ b/lib/build.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: all
   gather_facts: no
+  become: yes
 
   vars: 
     packages:
@@ -13,14 +14,14 @@
       - mysql-server
       - mysql-client
       - python3-pymysql
+      - openjdk-11-jdk
   
-  tags: itrust
+  tags: iTrust
   tasks: 
     - name: Install required packages for iTrust
       apt: pkg={{item}} state=present update_cache=yes
       become: yes
       with_items: "{{packages}}"
-
     - name: Clone itrust
       tags: itrust
       become: yes
@@ -29,9 +30,25 @@
         clone: yes
         update: yes
         dest: "/home/ubuntu/iTrust"
-
     - name: Make sure mysql is running
       service:
         name: mysql
         state: started
         enabled: True
+    - name: copy .my.cnf file with mysql root password credentials
+      template: src=my.cnf.j2 dest=/root/.my.cnf owner=root mode=0777 
+      become: yes
+    - name: Change the authentication plugin of MySQL root user to mysql_native_password
+      shell: mysql -u root -e 'UPDATE mysql.user SET plugin="mysql_native_password" WHERE user="root" AND host="localhost"'
+      become: yes
+    - name: Flush Privileges
+      shell: mysql -u root -e 'FLUSH PRIVILEGES'
+      become: yes
+    - name: Set MySQL root password
+      mysql_user:
+        login_host: 'localhost'
+        login_user: 'root'
+        login_password: ''
+        name: 'root'
+        password: 'root'
+        state: present
