--- a/lib/build.yml
+++ b/lib/build.yml
@@ -1,8 +1,8 @@
 setup: 
   - sudo apt update -y
   - sudo apt install git wget -y
-  - rm -rf iTrust2-v10
-  - rm -rf checkbox.io-micro-preview
+  - sudo rm -rf iTrust2-v10
+  - sudo rm -rf checkbox.io-micro-preview
   - sudo apt install -qq -y debconf-utils
   - export DEBIAN_FRONTEND="noninteractive"
   - echo \"mysql-server mysql-server/root_password password {{mysql_pass}}\" | sudo debconf-set-selections
