--- a/lib/build.yml
+++ b/lib/build.yml
@@ -1,12 +1,11 @@
-setup: 
-  - sudo apt-get update -y
-  - sudo apt-get install git wget -y
-  - sudo rm -rf iTrust2-v10
-  - sudo rm -rf checkbox.io-micro-preview
-  - sudo apt install -qq -y debconf-utils
+setup:
+  - sudo apt-get -o Acquire::Check-Valid-Until=false -o Acquire::Check-Date=false update
+  - sudo apt-get update -y > /dev/null
+  - sudo apt-get install git wget -y > /dev/null
+  - sudo apt install -qq -y debconf-utils > /dev/null
   - export DEBIAN_FRONTEND="noninteractive"
-  - sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password password {{mysql_pass}}'
-  - sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password {{mysql_pass}}'
+  - sudo debconf-set-selections <<< "mysql-server mysql-server/root_password password {{mysql_pass}}"
+  - sudo debconf-set-selections <<< "mysql-server mysql-server/root_password_again password {{mysql_pass}}"
  
 Variable:
   - DEBIAN_FRONTEND="noninteractive"
@@ -15,22 +14,22 @@ jobs:
   - name: itrust-build
     steps: 
       - name: install JRE
-        run: sudo apt install default-jre -y
+        run: sudo apt install default-jre -y > /dev/null
       - name: install JDK
-        run: sudo apt install openjdk-11-jdk -y
+        run: sudo apt install openjdk-11-jdk -y > /dev/null
       - name: install Maven
         run: sudo apt install maven -y ; export PATH=/opt/apache-maven-3.8.4/bin:$PATH 
       - name: install nodejs
-        run: sudo apt install nodejs -y
+        run: sudo apt install nodejs -y > /dev/null
       - name: install npm
         run: sudo apt install npm -y   
-      - name: install mysql
+      - name: install mysql > /dev/null
         run: sudo apt install -y mysql-server
-      - name: clone itrust
+      - name: clone itrust > /dev/null
         run: git clone https://{{git_token}}@github.ncsu.edu/engr-csc326-staff/iTrust2-v10.git           
-      - name: create application.yml file
+      - name: create application.yml file > /dev/null
         run: cp iTrust2-v10/iTrust2/src/main/resources/application.yml.template iTrust2-v10/iTrust2/src/main/resources/application.yml
-      - name: set password in application.yml
+      - name: set password in application.yml > /dev/null
         run: sed -i 's/password\:/password\:\ {{mysql_pass}}/g' iTrust2-v10/iTrust2/src/main/resources/application.yml
       - name: test iTrust1
         run: mvn -f iTrust2-v10/iTrust2 --batch-mode --update-snapshots clean test
@@ -38,7 +37,7 @@ jobs:
   - name: mutation-coverage
     mutation:
       url: https://github.com/chrisparnin/checkbox.io-micro-preview
-      iterations: 1000
+      iterations: 5
       snapshots:
        - http://localhost:3000/survey/long.md
        - http://localhost:3000/survey/upload.md
