--- a/lib/build.yml
+++ b/lib/build.yml
@@ -4,8 +4,8 @@ setup:
   - sudo apt-get install git wget -y > /dev/null
   - sudo apt install -qq -y debconf-utils > /dev/null
   - export DEBIAN_FRONTEND="noninteractive"
-  - sudo debconf-set-selections <<< "mysql-server mysql-server/root_password password {{mysql_pass}}"
-  - sudo debconf-set-selections <<< "mysql-server mysql-server/root_password_again password {{mysql_pass}}"
+  - sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password password {{mysql_pass}}'
+  - sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password {{mysql_pass}}'
  
 Variable:
   - DEBIAN_FRONTEND="noninteractive"
