--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules/
 .env
 config.json
-# snapshot.JSON
-# mutation/Images
-# mutation/result.json
-# mutation/mutationCoverage.txt
+snapshot.JSON
+mutation/Images
+mutation/result.json
+mutation/mutationCoverage.txt
