--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.26.1",
     "chalk": "^4.1.2",
     "dotenv": "^16.0.0",
+    "got": "^10.7.0",
+    "http-proxy": "^1.18.0",
     "hasbin": "^1.2.3",
     "js-yaml": "^4.1.0",
     "yargs": "^17.3.1"
