--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ mutation/result.json
 mutation/mutationCoverage.txt
 1000_Mutations/
 inventory.json
-pj
-pj.pub
+droplet-blue.json
+droplet-green.json
