--- a/yaml/build.yml
+++ b/yaml/build.yml
@@ -50,6 +50,8 @@ jobs:
        - http://localhost:3000/survey/variations.md
 
   - name: itrust-deploy
+    warFileLoc: iTrust2-v10/iTrust2/target/iTrust2-10.war
+    homePage: iTrust2-10/login
     steps: 
       - name: install JRE
         run: sudo apt-get install default-jre -y
