Removing stress test

--- a/yaml/buildSchool.yml
+++ b/yaml/buildSchool.yml
@@ -41,7 +41,7 @@ jobs:
     
   - name: school-deploy
     homePage: ""
-    sourceFileLoc: Angular-School-Management-System/dist/FsmsApp/
+    sourceFileLoc: Angular-School-Management-System/dist/FsmsApp/*
     deployFileLoc: /var/www/html/
     server: nginx
     port: 80
